--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,4 @@
-blinker==1.9.0
-certifi==2026.1.4   
-click==8.3.1        
-cloudinary==1.44.1  
-colorama==0.4.6     
-dnspython==2.8.0    
-Flask==3.1.2        
-itsdangerous==2.2.0 
-Jinja2==3.1.6       
-MarkupSafe==3.0.3   
-pymongo==4.16.0     
-python-dotenv==1.2.1
-six==1.17.0
-urllib3==2.6.3      
-Werkzeug==3.1.5 
+Flask>=3.1
+pymongo>=4.16
+cloudinary>=1.44
+python-dotenv>=1.2
